[project]
name = "hydron"
version = "0.0.0"
description = "Python interface for launching and post-processing magnetohydrodynamic simulations"
authors = [{name = "Sujay Shankar", email = "sujays2001@gmail.com"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
test = []
docs = []

[project.urls]
repository = "https://github.com/Sujay-Shankar/hydron"
issues = "https://github.com/Sujay-Shankar/hydron/issues"
documentation = "https://sujay-shankar.github.io/hydron"
